--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 						<li>
 						</li>
 						<li>
-							<a href="contact.html">Contact &gt;</a>
+							Contact
 						</li>
 					</ul>
 				</nav>
