--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 							<ul class="site-navigation nav navbar-nav">
 								<li>
-									<a href="index.html">Accueil</a>
+									Accueil
 								</li>
 								<li>
 								</li>
