--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white textup">
+							<p class="text-center white textup textbld">
 								La chouette agence - Agence web basée à Lyon.<br>
 							</p>
 							<div class="row row-no-gutters social">
