--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 		
 		
-		<script src="./js/jquery-2.1.0.js"></script>
+		<script src="./js/jquery-2.1.0.js" defer></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" defer></script>
 		<script src="./js/blocs.js" defer></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.18/jquery.touchSwipe.min.js" defer></script>
@@ -59,7 +59,7 @@
 					</div>
 				</article>
 				<article>
-					<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+					<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 						<div class="container bloc-md">
 							<div class="row">
 								<div class="col-sm-12 text-center">
@@ -116,7 +116,7 @@
 								</div>
 							</div>
 						</div>
-					</section>
+					</div>
 
 					<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 						<div class="container bloc-lg">
